--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -32,12 +32,16 @@ html {
     @media(max-width:375px) {
         font-size: 87.5%;
     }
+
 }
 
 body {
     background: var(--background);
     -webkit-font-smoothing: antialiased;
+
 }
+
+
 
 body, input, textarea, button {
     font-size: 18px;
@@ -51,7 +55,7 @@ h1, h2, h3, h4, h5, h6, strong, span {
     font-weight: 900;
 }
 
-button {
+button,a{
     cursor: pointer;
 }
 
