--- a/src/components/Grid/styles.scss
+++ b/src/components/Grid/styles.scss
@@ -6,3 +6,9 @@
         width: 100%;
     }
 }
+
+@media screen and(min-width: 767px){
+    .section-grid{
+        grid-template-columns: 1fr 1fr 1fr 1fr;
+    }
+}
