--- a/src/components/Header/styles.scss
+++ b/src/components/Header/styles.scss
@@ -1,9 +1,10 @@
 header{
+    background-color: var(--blue);
     background-image: url('../../assets/mobile/image-header.jpg');
     background-repeat: no-repeat;
+    background-position: bottom ;
     background-size: cover;
-    background-position: center;
-    height:500px;
+    height:100vh;
     width: 100%;
 
     top: 0;
@@ -66,7 +67,7 @@ header{
                 }
             }
 
-            :last-child{
+            >:last-child{
                 a{
                     font-family: 'Fraunces';
                     font-size: 0.75rem;
@@ -88,7 +89,7 @@ header{
     
 
 
-    :last-child{
+    >:last-child{
         display:flex;
         flex-direction: column;
         
@@ -96,6 +97,7 @@ header{
 
         h1{
             display: inline-block;
+            padding:0 5%;
             width:100%;
             margin-top: 6.75rem;
             text-align: center;
@@ -132,6 +134,61 @@ header{
        
 
     }
+}
 
+@media screen and(min-width: 767px){
+    header{
+        background-image: url('../../assets/desktop/image-header.jpg');
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+
+        nav{
+            
+
+            .toggle, .triangle{
+                display:none;
+            }
+
+            ul{
+                flex-direction: row;
+                column-gap: 1.75rem;
+                color: #fff;
+
+                li{
+    
+                    a{  
+                        color: var(--white);
+                    }
+                }
+
+                >:last-child{
+                    a{
+                        background:var(--white);
+
+                    }
+                    
+                }
+            }
+        }
+
+        >:last-child{
+            width:100%;
+    
+            h1{
+
+                width:100%;
+                margin-top: 6.75rem;
+                font-size: 3.75rem;
+                color: var(--white);
+            }
+    
+            img{
+                margin-top: 2.25rem;
+                width:1.75rem;
+            }
+        }
+
+    }
 
 }
